--- a/ControlServer/package.json
+++ b/ControlServer/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jade": "^1.11.0",
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
