--- a/ControlServer/package.json
+++ b/ControlServer/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supercharge/request-ip": "^1.1.2",
     "body-parser": "^1.19.0",
+    "child_process": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -19,6 +20,7 @@
     "moment": "^2.27.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "python-shell": "^2.0.3"
   }
 }
